--- a/style.css
+++ b/style.css
@@ -3,8 +3,35 @@ body {
   font-weight: 300;
   background-image: url(linedpaper.png);
   background-repeat: repeat;
+  padding: 10px 10px 10px 10px;
 }
 #wrapper {
   width: 960px;
   margin: 20px auto 20px auto;
+}
+a {
+	color: green;
+}
+a:visited{
+	color: orange;
+}
+h1 {
+	color: red;
+}
+h4 {
+	color: green;
+}
+#summary {
+    color: #03A9F4;
+}
+.unicorns{
+	color: purple;
+}
+img {
+	/*width: 50%;*/
+	 width: 200px;
+}
+#pic {
+	/*place my photo at the center*/
+	text-align: center;
 }
