--- a/style.css
+++ b/style.css
@@ -12,82 +12,70 @@ body {
   padding: 10px 10px 10px 10px;
 }
 
-#wrapper {
-  width: 960px;
-  margin: 20px auto 20px auto;
-}
-
-.navigation {
-    width: 100%;
-    border-top: 1px solid grey;
-    border-bottom: 1px solid grey;
-
-}
-.navigation ul {
-    margin: 0;
-    padding: 0;
+h1 {
+    font-family:Sorts Mill Goudy;
     text-align: center;
+    margin: 60px 0px 60px 0px;
+    font-size:60px;
 }
-.navigation ul li {
-    display: inline-block;
-    margin: 10px 20px;
+
+h4 {
     font-weight: bold;
 }
 
-#connectwithme ul li {
-    display: inline-block;
-    margin: 0 5px;;
-    font-size:8px;
+
+.navbar {
+    background-color: white;
+    border: hidden;
+    border-radius: 0px;
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
 }
 
-h1 {
-	text-align: center;
-	margin: 30px 0px 40px 0px;
-	font-size:28px;
+#wrapper {
+    margin-top:40px;
 }
-.right {
-    width: 220px;
-    height: 1000px;
-    float: right;
-    display: inline;
-    margin: 0 10px 0 10px;
+
+.left p{
+    font-weight: bold;
+    font-size: 18px;
 }
+
 #profile{
-	margin-top: 50px;
-
+    text-align: center;
 }
-.right p{
-	font-size:12px;
-	text-align:center;
 
+#profile ul li{
+    display: inline-block;
+    margin: 10px;
+    font-size:15px;
+    padding-left: px
 }
-.right .sidebarPhotos {
+
+.connectwithme{
+    margin-left: -40px;
+}
+
+#pic img {
+    /*width: 50%;*/
+     width: 100px;
+}
+
+#FacebookPhotos .sidebarPhotos {
     margin-top: 20px;
     padding:0 1px;
     float: left;
     width: 100%;
 }
-.right .sidebarPhotos a img {
-    width: 88px;
-    padding: 8px;
+
+#FacebookPhotos li {
+    display: inline-block;
+
+}
+
+#FacebookPhotos ul li a img {
+    width: 126px;
+    padding: 5px;
     border: 1px solid #eee;
     margin-bottom: 5px;
-}
-.right .sidebarPhotos li {
-	display: inline-block;
-}
-
-img {
-	/*width: 50%;*/
-	 width: 150px;
-}
-#pic {
-	/*place my photo at the center*/
-	text-align: center;
-}
-
-.left{
-	width:650px;
-    margin-top: 50px;
-    height: 1000px;
 }
